--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -487,7 +487,6 @@ div {
             bottom: 0;
             width: 49vw;
             max-width: max-content;
-            right: 0;
             height: max-content;
             padding: 20px;
             background-color: rgba($color: white, $alpha: 0.9);
@@ -507,8 +506,20 @@ div {
             }
         }
 
+        .cover_title_right {
+            right: 0;
+        }
+
         .cover_title_hover {
             transform: translateY(0%);
+            left: auto;
+            right: 0;
+        }
+
+        .cover_title_hover_left {
+            transform: translateY(0%);
+            left: 0;
+            right: auto;
         }
     }
 
@@ -583,7 +594,7 @@ div {
     }
 
     .div_items {
-        height: 105vh;
+        height: 130vh;
         padding: 5% 0 0;
         max-height: 700px;
 
@@ -724,6 +735,7 @@ div {
 .searchPage,
 .detailPage {
     min-height: calc(100vh - 100px);
+    padding: 50px 0;
 
     .title {
         text-align: center;
@@ -770,41 +782,97 @@ div {
     }
 
     .detail {
-        width: 100%;
+        width: 90%;
         max-width: 768px;
         margin: auto;
         background-color: white;
         border-radius: 5px;
         overflow: hidden;
-        padding: 1%;
+        padding: 10px;
         line-height: 1.5;
 
-        .image {
-            width: 90%;
-            margin: 20px auto;
+        h2 {
+            font-size: 1.15rem;
+        }
+
+        h3 {
+            font-size: 0.9rem;
+            color: darkcyan;
+
+            span {
+                opacity: 0.75;
+            }
+        }
+
+        h4 {
+            font-size: 1rem;
+            color: var(--main);
         }
 
         .content {
-            width: 90%;
-            margin: 20px auto;
 
-            li {
-                opacity: 0.75;
+            .content_title {
+                margin-bottom: 20px;
             }
 
-            .text {
-                margin: 15px 0;
-                text-align: left;
+        }
 
-                h1 {
-                    font-size: 100%;
+        @media (min-width:575px) {
+            h2 {
+                font-size: 1.25rem;
+                margin-bottom: 10px;
+            }
+
+            h3 {
+                font-size: 1rem;
+            }
+        }
+
+        @media (min-width:768px) {
+
+            padding: 50px;
+
+            h4 {
+                font-size: 1rem;
+            }
+
+            .content {
+                display: flex;
+
+                .image {
+                    width: 50%;
                 }
 
-                div {
-                    opacity: 0.9;
-                    margin: 10px 0
+                .content_title {
+                    width: 50%;
                 }
             }
+
+            ;
+        }
+    }
+}
+
+.facilityPage {
+    background-color: var(--second);
+
+    .title_facility {
+        width: 90%;
+        margin: auto;
+        max-width: 768px;
+
+        p {
+            height: 40px;
+            width: 125px;
+            line-height: 40px;
+            margin: 0 10px;
+            background-color: var(--main);
+            color: white;
+            text-align: center;
+            border-top-left-radius: 15px;
+            border-top-right-radius: 15px;
+            font-weight: bold;
+            letter-spacing: 1px;
         }
     }
 }
