--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -813,6 +813,19 @@ div {
 
             .content_title {
                 margin-bottom: 20px;
+
+                .social_icon {
+                    width: max-content;
+                    margin: 5px 5px 5px auto;
+
+                    svg,
+                    img {
+                        width: 25px;
+                        height: 25px;
+                        margin: 10px 5px;
+                    }
+
+                }
             }
 
         }
