--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -885,6 +885,25 @@ div {
             ;
         }
     }
+
+    .apply {
+        p {
+            margin: 0 5px;
+        }
+
+        .button {
+            width: 375px;
+            height: 40px;
+            line-height: 40px;
+            border-radius: 5px;
+            background-color: var(--main);
+            color: white;
+            font-weight: bold;
+            text-align: center;
+            margin: 50px auto 0;
+            cursor: pointer;
+        }
+    }
 }
 
 .facilityPage {
@@ -892,7 +911,7 @@ div {
 
     .title_facility {
         width: 90%;
-        margin: auto;
+        margin: 20px auto 0;
         max-width: 768px;
 
         p {
