--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -887,6 +887,10 @@ div {
     }
 
     .apply {
+        h4 {
+            width: 75px
+        }
+
         p {
             margin: 0 5px;
         }
