--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1186,6 +1186,7 @@ div {
 .searchPage .apply h4,
 .detailPage .apply h4 {
   width: 75px;
+  line-height: 24px;
 }
 
 .searchPage .apply p,
@@ -1195,7 +1196,7 @@ div {
 
 .searchPage .apply .button,
 .detailPage .apply .button {
-  width: 375px;
+  width: 250px;
   height: 40px;
   line-height: 40px;
   border-radius: 5px;
