--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --background: #fdefcd;
   --main: #2d66d3;
@@ -819,11 +820,11 @@ div {
   font-size: 20px;
   text-align: center;
   position: absolute;
-  top: 0px;
+  top: 100px;
   left: calc(50vw - 160px);
   width: max-content;
   height: 140vh;
-  max-height: 1100px;
+  max-height: 10 Ư00px;
   text-shadow: 1px 1px 3px #444;
   color: #f1f5f7;
 }
@@ -942,6 +943,10 @@ div {
 
 .contain_V2 .div_items .items .item .item_title h4 {
   opacity: 0.75;
+}
+
+.contain_V2 .div_items .items .item .item_title .contentTitle {
+  margin: 20px 0;
 }
 
 .contain_V2 .div_items .items .item .item_title .tag {
