--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -527,11 +527,11 @@ div {
         font-size: 20px;
         text-align: center;
         position: absolute;
-        top: 0px;
+        top: 100px;
         left: calc(50vw - 160px);
         width: max-content;
         height: 140vh;
-        max-height: 1100px;
+        max-height: 10 Ư00px;
         text-shadow: 1px 1px 3px #444;
         color: #f1f5f7;
 
@@ -643,6 +643,10 @@ div {
 
                     h4 {
                         opacity: 0.75;
+                    }
+
+                    .contentTitle {
+                        margin: 20px 0;
                     }
 
                     .tag {
