--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 :root {
   --background: #fdefcd;
   --main: #2d66d3;
@@ -824,7 +823,7 @@ div {
   left: calc(50vw - 160px);
   width: max-content;
   height: 140vh;
-  max-height: 10 Ư00px;
+  max-height: 1000px;
   text-shadow: 1px 1px 3px #444;
   color: #f1f5f7;
 }
