--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -531,7 +531,7 @@ div {
         left: calc(50vw - 160px);
         width: max-content;
         height: 140vh;
-        max-height: 10 Ư00px;
+        max-height: 1000px;
         text-shadow: 1px 1px 3px #444;
         color: #f1f5f7;
 
