--- a/src/style/component.css
+++ b/src/style/component.css
@@ -44,3 +44,10 @@
 .dangerousBox a {
     text-decoration: underline;
 }
+
+@media (min-width:1200px) {
+    .mw1200px-grid-reverse {
+
+        flex-direction: row-reverse;
+    }
+}
