--- a/src/style/grid.css
+++ b/src/style/grid.css
@@ -4,310 +4,256 @@
   flex-wrap: wrap;
 }
 
-.grid_box .grid_child {
-  margin: 20px 0px 0px 20px;
-}
-
 .xs0 {
   width: 0%;
   overflow: hidden;
   margin: 0;
 }
 
+.xs1 {
+  width: calc((100% * 1 / 12));
+}
+
 .xs2 {
-  width: calc(((100% - 20px) / (12 / 2)) - 20px);
+  width: calc((100% * 2 / 12));
 }
 
 .xs3 {
-  width: calc(((100% - 20px) / (12 / 3)) - 20px);
+  width: calc((100% * 3 / 12));
 }
 
 .xs4 {
-  width: calc(((100% - 20px) / (12 / 4)) - 20px);
+  width: calc((100% * 4 / 12));
+}
+
+.xs5 {
+  width: calc((100% * 5 / 12));
 }
 
 .xs6 {
-  width: calc(((100% - 20px) / (12 / 6)) - 20px);
+  width: calc((100% * 6 / 12));
+}
+
+.xs7 {
+  width: calc((100% * 7 / 12));
 }
 
 .xs8 {
-  width: calc(((100% - 20px) / (12 / 8)) - 20px);
+  width: calc((100% * 8 / 12));
 }
 
 .xs9 {
-  width: calc(((100% - 20px) / (12 / 9)) - 20px);
+  width: calc((100% * 9 / 12));
+}
+
+.xs10 {
+  width: calc((100% * 10 / 12));
+}
+
+.xs11 {
+  width: calc((100% * 11 / 12));
 }
 
 .xs12 {
-  width: calc(((100% - 20px) / (12 / 12)) - 20px);
+  width: calc((100% * 12 / 12));
 }
 
-@media (min-width: 575px) {
+@media (min-width:575px) {
   .sm1 {
-    width: calc(((100% - 20px) / (12 / 1)) - 20px);
+    width: calc((100% * 1 / 12));
   }
-}
 
-@media (min-width: 575px) {
   .sm2 {
-    width: calc(((100% - 20px) / (12 / 2)) - 20px);
+    width: calc((100% * 2 / 12));
   }
-}
 
-@media (min-width: 575px) {
   .sm3 {
-    width: calc(((100% - 20px) / (12 / 3)) - 20px);
+    width: calc((100% * 3 / 12));
   }
-}
 
-@media (min-width: 575px) {
   .sm4 {
-    width: calc(((100% - 20px) / (12 / 4)) - 20px);
+    width: calc((100% * 4 / 12));
   }
-}
 
-@media (min-width: 575px) {
   .sm5 {
-    width: calc(((100% - 20px) / (12 / 5)) - 20px);
+    width: calc((100% * 5 / 12));
   }
-}
 
-@media (min-width: 575px) {
   .sm6 {
-    width: calc(((100% - 20px) / (12 / 6)) - 20px);
+    width: calc((100% * 6 / 12));
   }
-}
 
-@media (min-width: 575px) {
   .sm7 {
-    width: calc(((100% - 20px) / (12 / 7)) - 20px);
+    width: calc((100% * 7 / 12));
   }
-}
 
-@media (min-width: 575px) {
   .sm8 {
-    width: calc(((100% - 20px) / (12 / 8)) - 20px);
+    width: calc((100% * 8 / 12));
   }
-}
 
-@media (min-width: 575px) {
   .sm9 {
-    width: calc(((100% - 20px) / (12 / 9)) - 20px);
+    width: calc((100% * 9 / 12));
   }
-}
 
-@media (min-width: 575px) {
   .sm10 {
-    width: calc(((100% - 20px) / (12 / 10)) - 20px);
+    width: calc((100% * 10 / 12));
   }
-}
 
-@media (min-width: 575px) {
   .sm11 {
-    width: calc(((100% - 20px) / (12 / 11)) - 20px);
+    width: calc((100% * 11 / 12));
+  }
+
+  .sm12 {
+    width: calc((100% * 12 / 12));
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width:768px) {
   .md1 {
-    width: calc(((100% - 20px) / (12 / 1)) - 20px);
+    width: calc((100% * 1 / 12));
   }
-}
 
-@media (min-width: 768px) {
   .md2 {
-    width: calc(((100% - 20px) / (12 / 2)) - 20px);
+    width: calc((100% * 2 / 12));
   }
-}
 
-@media (min-width: 768px) {
   .md3 {
-    width: calc(((100% - 20px) / (12 / 3)) - 20px);
+    width: calc((100% * 3 / 12));
   }
-}
 
-@media (min-width: 768px) {
   .md4 {
-    width: calc(((100% - 20px) / (12 / 4)) - 20px);
+    width: calc((100% * 4 / 12));
   }
-}
 
-@media (min-width: 768px) {
   .md5 {
-    width: calc(((100% - 20px) / (12 / 5)) - 20px);
+    width: calc((100% * 5 / 12));
   }
-}
 
-@media (min-width: 768px) {
   .md6 {
-    width: calc(((100% - 20px) / (12 / 6)) - 20px);
+    width: calc((100% * 6 / 12));
   }
-}
 
-@media (min-width: 768px) {
   .md7 {
-    width: calc(((100% - 20px) / (12 / 7)) - 20px);
+    width: calc((100% * 7 / 12));
   }
-}
 
-@media (min-width: 768px) {
   .md8 {
-    width: calc(((100% - 20px) / (12 / 8)) - 20px);
+    width: calc((100% * 8 / 12));
   }
-}
 
-@media (min-width: 768px) {
   .md9 {
-    width: calc(((100% - 20px) / (12 / 9)) - 20px);
+    width: calc((100% * 9 / 12));
   }
-}
 
-@media (min-width: 768px) {
   .md10 {
-    width: calc(((100% - 20px) / (12 / 10)) - 20px);
+    width: calc((100% * 10 / 12));
   }
-}
 
-@media (min-width: 768px) {
   .md11 {
-    width: calc(((100% - 20px) / (12 / 11)) - 20px);
+    width: calc((100% * 11 / 12));
   }
-}
 
-@media (min-width: 768px) {
   .md12 {
-    width: calc(((100% - 20px) / (12 / 12)) - 20px);
+    width: calc((100% * 12 / 12));
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width:992px) {
   .lg1 {
-    width: calc(((100% - 20px) / (12 / 1)) - 20px);
+    width: calc((100% * 1 / 12));
   }
-}
 
-@media (min-width: 992px) {
   .lg2 {
-    width: calc(((100% - 20px) / (12 / 2)) - 20px);
+    width: calc((100% * 2 / 12));
   }
-}
 
-@media (min-width: 992px) {
   .lg3 {
-    width: calc(((100% - 20px) / (12 / 3)) - 20px);
+    width: calc((100% * 3 / 12));
   }
-}
 
-@media (min-width: 992px) {
   .lg4 {
-    width: calc(((100% - 20px) / (12 / 4)) - 20px);
+    width: calc((100% * 4 / 12));
   }
-}
 
-@media (min-width: 992px) {
   .lg5 {
-    width: calc(((100% - 20px) / (12 / 5)) - 20px);
+    width: calc((100% * 5 / 12));
   }
-}
 
-@media (min-width: 992px) {
   .lg6 {
-    width: calc(((100% - 20px) / (12 / 6)) - 20px);
+    width: calc((100% * 6 / 12));
   }
-}
 
-@media (min-width: 992px) {
   .lg7 {
-    width: calc(((100% - 20px) / (12 / 7)) - 20px);
+    width: calc((100% * 7 / 12));
   }
-}
 
-@media (min-width: 992px) {
   .lg8 {
-    width: calc(((100% - 20px) / (12 / 8)) - 20px);
+    width: calc((100% * 8 / 12));
   }
-}
 
-@media (min-width: 992px) {
   .lg9 {
-    width: calc(((100% - 20px) / (12 / 9)) - 20px);
+    width: calc((100% * 9 / 12));
   }
-}
 
-@media (min-width: 992px) {
   .lg10 {
-    width: calc(((100% - 20px) / (12 / 10)) - 20px);
+    width: calc((100% * 10 / 12));
   }
-}
 
-@media (min-width: 992px) {
   .lg11 {
-    width: calc(((100% - 20px) / (12 / 11)) - 20px);
+    width: calc((100% * 11 / 12));
+  }
+
+  .lg12 {
+    width: calc((100% * 12 / 12));
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width:1200px) {
   .xl1 {
-    width: calc(((100% - 20px) / (12 / 1)) - 20px);
+    width: calc((100% * 1 / 12));
   }
-}
 
-@media (min-width: 1200px) {
   .xl2 {
-    width: calc(((100% - 20px) / (12 / 2)) - 20px);
+    width: calc((100% * 2 / 12));
   }
-}
 
-@media (min-width: 1200px) {
   .xl3 {
-    width: calc(((100% - 20px) / (12 / 3)) - 20px);
+    width: calc((100% * 3 / 12));
   }
-}
 
-@media (min-width: 1200px) {
   .xl4 {
-    width: calc(((100% - 20px) / (12 / 4)) - 20px);
+    width: calc((100% * 4 / 12));
   }
-}
 
-@media (min-width: 1200px) {
   .xl5 {
-    width: calc(((100% - 20px) / (12 / 5)) - 20px);
+    width: calc((100% * 5 / 12));
   }
-}
 
-@media (min-width: 1200px) {
   .xl6 {
-    width: calc(((100% - 20px) / (12 / 6)) - 20px);
+    width: calc((100% * 6 / 12));
   }
-}
 
-@media (min-width: 1200px) {
   .xl7 {
-    width: calc(((100% - 20px) / (12 / 7)) - 20px);
+    width: calc((100% * 7 / 12));
   }
-}
 
-@media (min-width: 1200px) {
   .xl8 {
-    width: calc(((100% - 20px) / (12 / 8)) - 20px);
+    width: calc((100% * 8 / 12));
   }
-}
 
-@media (min-width: 1200px) {
   .xl9 {
-    width: calc(((100% - 20px) / (12 / 9)) - 20px);
+    width: calc((100% * 9 / 12));
   }
-}
 
-@media (min-width: 1200px) {
   .xl10 {
-    width: calc(((100% - 20px) / (12 / 10)) - 20px);
+    width: calc((100% * 10 / 12));
   }
-}
 
-@media (min-width: 1200px) {
   .xl11 {
-    width: calc(((100% - 20px) / (12 / 11)) - 20px);
+    width: calc((100% * 11 / 12));
+  }
+
+  .xl12 {
+    width: calc((100% * 12 / 12));
   }
 }
