--- a/src/style/global.css
+++ b/src/style/global.css
@@ -785,6 +785,7 @@ div {
 .archivePage .div_items .items .item .item_frame {
   height: 100%;
   position: relative;
+  cursor: pointer;
 }
 
 .archivePage .div_items .items .item .item_frame .cover {
@@ -792,6 +793,10 @@ div {
   aspect-ratio: 1.5;
   position: relative;
   overflow: hidden;
+}
+
+.archivePage .div_items .items .item .item_frame .cover img {
+  transition: all 0.25s;
 }
 
 .archivePage .div_items .items .item .item_frame .item_title {
@@ -826,9 +831,15 @@ div {
   margin: 0 0 0 auto;
 }
 
-.archivePage .div_items .items .item .item_frame .item_title .tag svg:hover {
-  color: white;
+.archivePage .div_items .items .item .item_frame:hover .cover img {
+  transform: scale(1.05);
+  opacity: 0.5;
+}
+
+.archivePage .div_items .items .item .item_frame:hover .item_title .tag p,
+.archivePage .div_items .items .item .item_frame:hover .item_title .tag svg {
   background-color: var(--main);
+  color: white;
 }
 
 .searchPage,
