--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -815,12 +815,17 @@ div {
                 .item_frame {
                     height: 100%;
                     position: relative;
+                    cursor: pointer;
 
                     .cover {
                         width: 100%;
                         aspect-ratio: 1.5;
                         position: relative;
                         overflow: hidden;
+
+                        img {
+                            transition: all 0.25s;
+                        }
                     }
 
                     .item_title {
@@ -853,15 +858,30 @@ div {
                                 height: 30px;
                                 margin: 0 0 0 auto;
                             }
-
-                            svg:hover {
-                                color: white;
-                                background-color: var(--main);
-                            }
                         }
                     }
                 }
 
+                .item_frame:hover {
+                    .cover {
+                        img {
+                            transform: scale(1.05);
+                            opacity: 0.5;
+                        }
+                    }
+
+                    .item_title {
+                        .tag {
+
+                            p,
+                            svg {
+                                background-color: var(--main);
+                                color: white;
+                            }
+                        }
+                    }
+
+                }
             }
         }
     }
